--- a/client/css/style.css
+++ b/client/css/style.css
@@ -20,3 +20,4 @@
 @import url(./include/inquiry_popup.css);
 @import url(./include/product_inquiry.css);
 @import url(./include/product_review.css);
+@import url(./include/cart.css);
