--- a/client/css/include/best_product_list.css
+++ b/client/css/include/best_product_list.css
@@ -13,16 +13,25 @@
   cursor:pointer;
 }
 
-.product-condition__item:first-child{
+[class^="product-condition__button"] {
+  flex-shrink: 0;
+  height: 24px;
+  border: 1px solid var(--white);
+  font-size:var(--text-base);
+  font-weight: 600;
+  color:var(--primary);
+}
+
+.product-condition__button-filter{
   cursor:default;
 }
 
-.product-condition__button{
-  width:100%;
-  height:24px;
-  all:unset;
-  font-size:var(--text-base);
-  font-weight:600;
+.product-condition__button--reset{
+  width:40px;
+  height:var(--text-base);
+  font-size:10px;
+  color:#a6a6a6;
+  cursor:pointer;
 }
 
 .product-condition__category-cnt{
@@ -30,14 +39,6 @@
   font-size:10px;
   color:var(--gray-300);
   padding-left:8px;
-}
-
-.product-condition__button--reset{
-  width:26px;
-  height:var(--text-base);
-  font-size:10px;
-  color:#a6a6a6;
-  cursor:pointer;
 }
 
 .product-condition__item--focused-title{
