--- a/client/css/include/product_review.css
+++ b/client/css/include/product_review.css
@@ -32,10 +32,12 @@
   line-height:var(--text-md);
 }
 
-.product-review__header__button{
-  all:unset;
-  width:155px;
-  height:44px;
+[class^="product-review__header__button"] {
+  flex-shrink:0;
+  width:157px;
+  height:46px;
+  box-sizing: border-box;
+  border: 1px solid var(--white);
   font-size:var(--text-base);
   font-weight:600;
   line-height:var(--text-xl);
@@ -63,8 +65,10 @@
   line-height:var(--text-md);
 }
 
-.product-reviewInfo__button, .product-reviewInfo__button--focused{
-  all:unset;
+[class^="product-reviewInfo__button"] {
+  flex-shrink: 0;
+  height: 24px;
+  border: 1px solid var(--white);
   font-size:var(--text-xs);
   font-weight:600;
   line-height:var(--text-xl);
@@ -80,7 +84,6 @@
   width:1px;
   height:10px;
   background:var(--gray-300);
-  margin:0 var(--spacing-xs);
 }
 
 .product-review__main--swiper{
