--- a/client/css/include/inquiry_popup.css
+++ b/client/css/include/inquiry_popup.css
@@ -108,6 +108,14 @@ fieldset{
   cursor:pointer;
 }
 
+.product-inquiry-popup input[type="checkbox"]{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  clip: rect(0px, 0px, 0px, 0px);
+  overflow: hidden;
+}
+
 .inquiry-popupForm__ico-check {
   display: inline-block;
   width: 24px;
