Assemble Home Page (#45)

--- a/client/css/include/main_banner.css
+++ b/client/css/include/main_banner.css
@@ -1,6 +1,7 @@
 .main-banner {
   position: relative;
-  width: 1900px;
+  width: 100%;
+  font-size: 0;
 }
 .main-banner .swiper {
   /* 메인배너를 위한 css 속성 추가로 작성하실 경우
