--- a/client/page/include/best_product_list.html
+++ b/client/page/include/best_product_list.html
@@ -2,10 +2,10 @@
 <html lang="ko-KR">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../../css/style.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../css/style.css">
   <title>Best Product List Component</title>
 </head>
 
@@ -14,12 +14,13 @@
     <ul class="product-condition__list">
       <li class="product-condition__item">
         <button type="button" class="product-condition__button-filter">필터</button>
-        <button type="button"
-          class="product-condition__button product-condition__button--reset">초기화</button>
+        <button type="button" class="product-condition__button product-condition__button--reset">초기화</button>
       </li>
       <li class="product-condition__item">
-        <button type="button" class="product-condition__button">카테고리<p
-            class="product-condition__category-cnt" data-category="1">1</p></button>
+        <button type="button" class="product-condition__button">
+          카테고리
+          <span class="product-condition__category-cnt" data-category="1">1</span>
+        </button>
         <i class="product-condition__ico-open">
           <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
             class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
@@ -43,85 +44,85 @@
             <ul class="product-condition-form__list">
               <li class="product-condition-form__item">
                 <label for="brand1" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand1" />
+                  <input type="checkbox" name="brand" id="brand1">
                   <i class="product-condition__ico-check"></i>
                   <span class="product-condition__brandName" data-brandname="gamjabat">감자밭</span>
                   <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
-                </label>            
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand2" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand2" />
+                  <input type="checkbox" name="brand" id="brand2">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="gangnammyeonog">강남면옥</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="gangnammyeonog">강남면옥</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand3" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand3" />
+                  <input type="checkbox" name="brand" id="brand3">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="gyeongnamjeyag">경남제약</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="gyeongnamjeyag">경남제약</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand4" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand4" />
+                  <input type="checkbox" name="brand" id="brand4">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="gyeongboggung">경복궁</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="gyeongboggung">경복궁</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand5" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand5" />
+                  <input type="checkbox" name="brand" id="brand5">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="golaesa">고래사</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="golaesa">고래사</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand6" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand6" />
+                  <input type="checkbox" name="brand" id="brand6">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="gomegongbang">고메공방</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="gomegongbang">고메공방</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand7" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand7" />
+                  <input type="checkbox" name="brand" id="brand7">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="gooneodiet">고온어다이어트</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="gooneodiet">고온어다이어트</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand8" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand8" />
+                  <input type="checkbox" name="brand" id="brand8">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="gyotomabeul">교토마블</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="gyotomabeul">교토마블</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
                 <label for="brand9" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand9" />
+                  <input type="checkbox" name="brand" id="brand9">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="geulaenollahouse">그래놀라 하우스</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="geulaenollahouse">그래놀라 하우스</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
               <li class="product-condition-form__item">
-                <label for="brand9" class="product-condition__label-check">
-                  <input type="checkbox" name="brand" id="brand9" />
+                <label for="brand10" class="product-condition__label-check">
+                  <input type="checkbox" name="brand" id="brand10">
                   <i class="product-condition__ico-check"></i>
-                  <p class="product-condition__brandName" data-brandname="gritssignalram">그리츠 시그니처 램</p>
-                  <p class="product-condition__brandName--cnt" data-brand-cnt="1">1</p>
-                </label>            
+                  <span class="product-condition__brandName" data-brandname="gritssignalram">그리츠 시그니처 램</span>
+                  <span class="product-condition__brandName--cnt" data-brand-cnt="1">1</span>
+                </label>
               </li>
-              <div class="product-condition__item-more">
+              <li class="product-condition__item-more">
                 <span>브랜드 더보기</span>
                 <i class="product-condition_ico-move">
                   <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -129,7 +130,7 @@
                     <path d="M7 5L11 9L7 13" stroke="#999999" stroke-width="1.2"></path>
                   </svg>
                 </i>
-              </div>
+              </li>
             </ul>
           </fieldset>
         </form>
