Fix mistake of conflict solve

--- a/client/css/include/signup.css
+++ b/client/css/include/signup.css
@@ -109,7 +109,8 @@
   height: 1px;
   clip: rect(0px, 0px, 0px, 0px);
   overflow: hidden;
-} */
+}
+
 .signup-form__ico-radio {
   width: 24px;
   height: 24px;
