--- a/client/page/include/product_inquiry.html
+++ b/client/page/include/product_inquiry.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="../../css/style.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <title>Product Inquiry Component</title>
 </head>
-
 <body>
   <section class="product-inquiry">
     <header class="product-inquiry__header">
       <div class="product-inquiry__header-info">
         <h2>상품문의</h2>
         <ul class="product-inquiry__header__list">
-          <li class="product-inquiry__header__item">• 상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수 있습니다.
+          <li class="product-inquiry__header__item">• 상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수
+            있습니다.
           </li>
           <li class="product-inquiry__header__item">• 배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이컬리 내 1:1 문의에 남겨주세요.</li>
         </ul>
       </div>
       <button type="button" class="product-inquiry__header__button">문의하기</button>
     </header>
-    <main class="product-inquiry__main">
+    <div class="product-inquiry__main">
       <!-- Swiper -->
       <div class="swiper product-review__swiper">
         <div class="swiper-wrapper">
@@ -39,7 +38,7 @@
                 </tr>
               </thead>
               <tbody class="product-inquiry__tbody">
-                <tr  class="product-inquiry__tr-notice">
+                <tr class="product-inquiry__tr-notice">
                   <td class="product-inquiry__notice-title">
                     <span class="product-inquiry__notice-label">공지</span>
                     <span class="product-inquiry__notice-info">판매(일시)중단 제품 안내 (22.11.10 업데이트)</span>
@@ -59,8 +58,7 @@
                 <tr class="product-inquiry__tr-issueContent">
                   <td colspan="4">
                     <div class="product-issueContent-question">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="flex-grow-0 flex-shrink-0 w-6 h-6 relative" preserveAspectRatio="none">
                         <g clip-path="url(#clip0_549_2633)">
                           <path
@@ -77,13 +75,12 @@
                         </defs>
                       </svg>
                       <span class="product-issueContent-question__content">
-                        스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요 <br />
+                        스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요 <br>
                         환불 요청합니다.
                       </span>
                     </div>
                     <div class="product-issueContent-answer">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="flex-grow-0 flex-shrink-0 w-6 h-6 relative" preserveAspectRatio="none">
                         <g clip-path="url(#clip0_549_2643)">
                           <path
@@ -101,13 +98,13 @@
                       </svg>
                       <p>
                         <span class="product-issueContent-answer__content">
-                          안녕하세요. 칼리입니다. <br />
-                          믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다. <br /><br />
+                          안녕하세요. 칼리입니다. <br>
+                          믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다. <br><br>
                           더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.
-                          <br /><br />
-                          다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다. <br /><br />
+                          <br><br>
+                          다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다. <br><br>
                           불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다.
-                          <br /><br />
+                          <br><br>
                           칼리 드림.
                         </span>
                         <span class="product-issueContent-answerDate">2022.11.11</span>
@@ -117,24 +114,8 @@
                 </tr>
                 <tr class="product-inquiry__tr-secrete">
                   <td class="product-inquiry__td-secrete-title">
-                    <p>비밀글입니다.</p>
-                    <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="flex-grow-0 flex-shrink-0 w-3 h-3.5 relative" preserveAspectRatio="none">
-                      <g clip-path="url(#clip0_549_2565)">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M11.043 12.575C11.0425 12.6432 11.0151 12.7084 10.9668 12.7565C10.9185 12.8046 10.8532 12.8317 10.785 12.832H1.214C1.14583 12.8317 1.08051 12.8046 1.03221 12.7565C0.983908 12.7084 0.956526 12.6432 0.956 12.575V5.42C0.956 5.278 1.073 5.162 1.214 5.162H10.784C10.928 5.162 11.044 5.278 11.044 5.42V12.575H11.043ZM3.685 3.237C3.68579 2.63238 3.9264 2.05276 4.35403 1.62532C4.78165 1.19788 5.36138 0.957529 5.966 0.957C6.5707 0.957265 7.15058 1.19753 7.57826 1.62503C8.00595 2.05253 8.24647 2.6323 8.247 3.237V4.205H3.685V3.237ZM10.785 4.205H9.205V3.237C9.20394 2.3783 8.86215 1.55512 8.25467 0.948206C7.6472 0.341294 6.8237 0.000264295 5.965 0C5.10708 0.00132358 4.28472 0.342852 3.67826 0.949678C3.07181 1.5565 2.73079 2.37908 2.73 3.237V4.205H1.214C0.544 4.205 0 4.75 0 5.42V12.575C0 13.244 0.545 13.789 1.214 13.789H10.784C11.455 13.789 12 13.244 12 12.575V5.42C12 4.75 11.455 4.205 10.785 4.205Z"
-                          fill="#B5B5B5"></path>
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M5 8.2002C5 8.5432 5.184 8.8322 5.448 9.0122V10.3422H6.551V9.0122C6.68673 8.92408 6.79868 8.80392 6.87698 8.66231C6.95529 8.5207 6.99754 8.36199 7 8.2002C7 7.93498 6.89464 7.68063 6.70711 7.49309C6.51957 7.30555 6.26522 7.2002 6 7.2002C5.73478 7.2002 5.48043 7.30555 5.29289 7.49309C5.10536 7.68063 5 7.93498 5 8.2002Z"
-                          fill="#B5B5B5"></path>
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_549_2565">
-                          <rect width="12" height="14" fill="white"></rect>
-                        </clipPath>
-                      </defs>
-                    </svg>
+                    <span>비밀글입니다.</span>
+                    <i class="secrete__ico-secrete"></i>
                   </td>
                   <td class="product-inquiry__td-secrete-writer">김*진</td>
                   <td class="product-inquiry__td-secrete-date">2022.10.09</td>
@@ -142,24 +123,8 @@
                 </tr>
                 <tr class="product-inquiry__tr-secrete">
                   <td class="product-inquiry__td-secrete-title">
-                    <p>비밀글입니다.</p>
-                    <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="flex-grow-0 flex-shrink-0 w-3 h-3.5 relative" preserveAspectRatio="none">
-                      <g clip-path="url(#clip0_549_2565)">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M11.043 12.575C11.0425 12.6432 11.0151 12.7084 10.9668 12.7565C10.9185 12.8046 10.8532 12.8317 10.785 12.832H1.214C1.14583 12.8317 1.08051 12.8046 1.03221 12.7565C0.983908 12.7084 0.956526 12.6432 0.956 12.575V5.42C0.956 5.278 1.073 5.162 1.214 5.162H10.784C10.928 5.162 11.044 5.278 11.044 5.42V12.575H11.043ZM3.685 3.237C3.68579 2.63238 3.9264 2.05276 4.35403 1.62532C4.78165 1.19788 5.36138 0.957529 5.966 0.957C6.5707 0.957265 7.15058 1.19753 7.57826 1.62503C8.00595 2.05253 8.24647 2.6323 8.247 3.237V4.205H3.685V3.237ZM10.785 4.205H9.205V3.237C9.20394 2.3783 8.86215 1.55512 8.25467 0.948206C7.6472 0.341294 6.8237 0.000264295 5.965 0C5.10708 0.00132358 4.28472 0.342852 3.67826 0.949678C3.07181 1.5565 2.73079 2.37908 2.73 3.237V4.205H1.214C0.544 4.205 0 4.75 0 5.42V12.575C0 13.244 0.545 13.789 1.214 13.789H10.784C11.455 13.789 12 13.244 12 12.575V5.42C12 4.75 11.455 4.205 10.785 4.205Z"
-                          fill="#B5B5B5"></path>
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M5 8.2002C5 8.5432 5.184 8.8322 5.448 9.0122V10.3422H6.551V9.0122C6.68673 8.92408 6.79868 8.80392 6.87698 8.66231C6.95529 8.5207 6.99754 8.36199 7 8.2002C7 7.93498 6.89464 7.68063 6.70711 7.49309C6.51957 7.30555 6.26522 7.2002 6 7.2002C5.73478 7.2002 5.48043 7.30555 5.29289 7.49309C5.10536 7.68063 5 7.93498 5 8.2002Z"
-                          fill="#B5B5B5"></path>
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_549_2565">
-                          <rect width="12" height="14" fill="white"></rect>
-                        </clipPath>
-                      </defs>
-                    </svg>
+                    <span>비밀글입니다.</span>
+                    <i class="secrete__ico-secrete"></i>
                   </td>
                   <td class="product-inquiry__td-secrete-writer">김*범</td>
                   <td class="product-inquiry__td-secrete-date">2022.10.13</td>
@@ -167,24 +132,8 @@
                 </tr>
                 <tr class="product-inquiry__tr-secrete">
                   <td class="product-inquiry__td-secrete-title">
-                    <p>비밀글입니다.</p>
-                    <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="flex-grow-0 flex-shrink-0 w-3 h-3.5 relative" preserveAspectRatio="none">
-                      <g clip-path="url(#clip0_549_2565)">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M11.043 12.575C11.0425 12.6432 11.0151 12.7084 10.9668 12.7565C10.9185 12.8046 10.8532 12.8317 10.785 12.832H1.214C1.14583 12.8317 1.08051 12.8046 1.03221 12.7565C0.983908 12.7084 0.956526 12.6432 0.956 12.575V5.42C0.956 5.278 1.073 5.162 1.214 5.162H10.784C10.928 5.162 11.044 5.278 11.044 5.42V12.575H11.043ZM3.685 3.237C3.68579 2.63238 3.9264 2.05276 4.35403 1.62532C4.78165 1.19788 5.36138 0.957529 5.966 0.957C6.5707 0.957265 7.15058 1.19753 7.57826 1.62503C8.00595 2.05253 8.24647 2.6323 8.247 3.237V4.205H3.685V3.237ZM10.785 4.205H9.205V3.237C9.20394 2.3783 8.86215 1.55512 8.25467 0.948206C7.6472 0.341294 6.8237 0.000264295 5.965 0C5.10708 0.00132358 4.28472 0.342852 3.67826 0.949678C3.07181 1.5565 2.73079 2.37908 2.73 3.237V4.205H1.214C0.544 4.205 0 4.75 0 5.42V12.575C0 13.244 0.545 13.789 1.214 13.789H10.784C11.455 13.789 12 13.244 12 12.575V5.42C12 4.75 11.455 4.205 10.785 4.205Z"
-                          fill="#B5B5B5"></path>
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M5 8.2002C5 8.5432 5.184 8.8322 5.448 9.0122V10.3422H6.551V9.0122C6.68673 8.92408 6.79868 8.80392 6.87698 8.66231C6.95529 8.5207 6.99754 8.36199 7 8.2002C7 7.93498 6.89464 7.68063 6.70711 7.49309C6.51957 7.30555 6.26522 7.2002 6 7.2002C5.73478 7.2002 5.48043 7.30555 5.29289 7.49309C5.10536 7.68063 5 7.93498 5 8.2002Z"
-                          fill="#B5B5B5"></path>
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_549_2565">
-                          <rect width="12" height="14" fill="white"></rect>
-                        </clipPath>
-                      </defs>
-                    </svg>
+                    <span>비밀글입니다.</span>
+                    <i class="secrete__ico-secrete"></i>
                   </td>
                   <td class="product-inquiry__td-secrete-writer">심*범</td>
                   <td class="product-inquiry__td-secrete-date">2022.08.30</td>
@@ -192,24 +141,8 @@
                 </tr>
                 <tr class="product-inquiry__tr-secrete">
                   <td class="product-inquiry__td-secrete-title">
-                    <p>비밀글입니다.</p>
-                    <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="flex-grow-0 flex-shrink-0 w-3 h-3.5 relative" preserveAspectRatio="none">
-                      <g clip-path="url(#clip0_549_2565)">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M11.043 12.575C11.0425 12.6432 11.0151 12.7084 10.9668 12.7565C10.9185 12.8046 10.8532 12.8317 10.785 12.832H1.214C1.14583 12.8317 1.08051 12.8046 1.03221 12.7565C0.983908 12.7084 0.956526 12.6432 0.956 12.575V5.42C0.956 5.278 1.073 5.162 1.214 5.162H10.784C10.928 5.162 11.044 5.278 11.044 5.42V12.575H11.043ZM3.685 3.237C3.68579 2.63238 3.9264 2.05276 4.35403 1.62532C4.78165 1.19788 5.36138 0.957529 5.966 0.957C6.5707 0.957265 7.15058 1.19753 7.57826 1.62503C8.00595 2.05253 8.24647 2.6323 8.247 3.237V4.205H3.685V3.237ZM10.785 4.205H9.205V3.237C9.20394 2.3783 8.86215 1.55512 8.25467 0.948206C7.6472 0.341294 6.8237 0.000264295 5.965 0C5.10708 0.00132358 4.28472 0.342852 3.67826 0.949678C3.07181 1.5565 2.73079 2.37908 2.73 3.237V4.205H1.214C0.544 4.205 0 4.75 0 5.42V12.575C0 13.244 0.545 13.789 1.214 13.789H10.784C11.455 13.789 12 13.244 12 12.575V5.42C12 4.75 11.455 4.205 10.785 4.205Z"
-                          fill="#B5B5B5"></path>
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M5 8.2002C5 8.5432 5.184 8.8322 5.448 9.0122V10.3422H6.551V9.0122C6.68673 8.92408 6.79868 8.80392 6.87698 8.66231C6.95529 8.5207 6.99754 8.36199 7 8.2002C7 7.93498 6.89464 7.68063 6.70711 7.49309C6.51957 7.30555 6.26522 7.2002 6 7.2002C5.73478 7.2002 5.48043 7.30555 5.29289 7.49309C5.10536 7.68063 5 7.93498 5 8.2002Z"
-                          fill="#B5B5B5"></path>
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_549_2565">
-                          <rect width="12" height="14" fill="white"></rect>
-                        </clipPath>
-                      </defs>
-                    </svg>
+                    <span>비밀글입니다.</span>
+                    <i class="secrete__ico-secrete"></i>
                   </td>
                   <td class="product-inquiry__td-secrete-writer">야*</td>
                   <td class="product-inquiry__td-secrete-date">2022.08.12</td>
@@ -217,24 +150,8 @@
                 </tr>
                 <tr class="product-inquiry__tr-secrete">
                   <td class="product-inquiry__td-secrete-title">
-                    <p>비밀글입니다.</p>
-                    <svg width="12" height="14" viewBox="0 0 12 14" fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="flex-grow-0 flex-shrink-0 w-3 h-3.5 relative" preserveAspectRatio="none">
-                      <g clip-path="url(#clip0_549_2565)">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M11.043 12.575C11.0425 12.6432 11.0151 12.7084 10.9668 12.7565C10.9185 12.8046 10.8532 12.8317 10.785 12.832H1.214C1.14583 12.8317 1.08051 12.8046 1.03221 12.7565C0.983908 12.7084 0.956526 12.6432 0.956 12.575V5.42C0.956 5.278 1.073 5.162 1.214 5.162H10.784C10.928 5.162 11.044 5.278 11.044 5.42V12.575H11.043ZM3.685 3.237C3.68579 2.63238 3.9264 2.05276 4.35403 1.62532C4.78165 1.19788 5.36138 0.957529 5.966 0.957C6.5707 0.957265 7.15058 1.19753 7.57826 1.62503C8.00595 2.05253 8.24647 2.6323 8.247 3.237V4.205H3.685V3.237ZM10.785 4.205H9.205V3.237C9.20394 2.3783 8.86215 1.55512 8.25467 0.948206C7.6472 0.341294 6.8237 0.000264295 5.965 0C5.10708 0.00132358 4.28472 0.342852 3.67826 0.949678C3.07181 1.5565 2.73079 2.37908 2.73 3.237V4.205H1.214C0.544 4.205 0 4.75 0 5.42V12.575C0 13.244 0.545 13.789 1.214 13.789H10.784C11.455 13.789 12 13.244 12 12.575V5.42C12 4.75 11.455 4.205 10.785 4.205Z"
-                          fill="#B5B5B5"></path>
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M5 8.2002C5 8.5432 5.184 8.8322 5.448 9.0122V10.3422H6.551V9.0122C6.68673 8.92408 6.79868 8.80392 6.87698 8.66231C6.95529 8.5207 6.99754 8.36199 7 8.2002C7 7.93498 6.89464 7.68063 6.70711 7.49309C6.51957 7.30555 6.26522 7.2002 6 7.2002C5.73478 7.2002 5.48043 7.30555 5.29289 7.49309C5.10536 7.68063 5 7.93498 5 8.2002Z"
-                          fill="#B5B5B5"></path>
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_549_2565">
-                          <rect width="12" height="14" fill="white"></rect>
-                        </clipPath>
-                      </defs>
-                    </svg>
+                    <span>비밀글입니다.</span>
+                    <i class="secrete__ico-secrete"></i>
                   </td>
                   <td class="product-inquiry__td-secrete-writer">김**사</td>
                   <td class="product-inquiry__td-secrete-date">2022.07.23</td>
@@ -246,8 +163,8 @@
           <div class="swiper-slide">Slide 2</div>
         </div>
       </div>
-    </main>
-    <section class="product-inquiry__button">
+    </div>
+    <div class="product-inquiry__button">
       <div class="product-inquiry__button-wrapper">
         <div class="product-inquiry__button-prev">
           <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -260,7 +177,7 @@
           </svg>
         </div>
       </div>
-    </section>
+    </div>
   </section>
 
   <!-- Initialize Swiper -->
@@ -273,5 +190,4 @@
     });
   </script>
 </body>
-
 </html>
