Assemble Cart Page (#45)

--- a/client/page/include/cart.html
+++ b/client/page/include/cart.html
@@ -15,7 +15,7 @@
 <body>
   <main class="main shopping-cart-main">
     <section class="shopping-cart">
-      <h2>장바구니</h2>
+      <h2 class="shopping-cart__title">장바구니</h2>
       <div class="shopping-cart__wrapper">
         <div class="shopping-cart__cartlist">
           <div class="shopping-cart__select-items">
@@ -242,9 +242,7 @@
               </div>
             </div>
           </div>
-          <button type="submit" class="shopping-cart__order-button">
-            <h3>주문하기</h3>
-          </button>
+          <button type="submit" class="shopping-cart__order-button">주문하기</button>
           <ul class="shopping-cart__order-additional-information">
             <li>쿠폰&#47;적립금은 주문서에서 사용 가능합니다&#46;</li>
             <li>&#91;주문완료&#93; 상태일 경우에만 주문 취소 가능합니다&#46;</li>
@@ -253,7 +251,6 @@
             <li>상품별로 적립금 지급 기준이 다를 수 있습니다&#46; &#40;상품 상세 페이지에서 확인 가능합니다&#41;</li>
           </ul>
         </div>
-      </div>
       </div>
     </section>
   </main>
