--- a/client/css/include/cart.css
+++ b/client/css/include/cart.css
@@ -7,15 +7,9 @@
   margin: 0 auto;
 }
 
-.shopping-cart h2 {
-  padding: 0 0 44px;
-  text-align: center;
-  font-weight: 600;
-  font-size: 21.328px;
-}
-
 .shopping-cart__wrapper {
   display: flex;
+  padding-top: 44px;
 }
 
 .shopping-cart__cartlist {
