--- a/client/page/include/pd_detail_info.html
+++ b/client/page/include/pd_detail_info.html
@@ -91,8 +91,11 @@
       <li>문의</li>
     </ul>
     <section class="product-description">
-      <h2 class="a11yHidden">탱탱쫄면 상품 설명 탭</h2>
+      <h2 class="a11yHidden">탱탱쫄면 상품 설명</h2>
       <img src="../../assets/product_detail/tangtang/detail_banner.png" alt="탱탱쫄면 상품 설명">
+    </section>
+    <section class="product-detail">
+      <h2 class="a11yHidden">탱탱쫄면 상세 정보</h2>
       <img src="../../assets/product_detail/tangtang/detail_info.png" alt="탱탱쫄면 상세 정보">
     </section>
   </main>
