--- a/client/page/include/product_inquiry.html
+++ b/client/page/include/product_inquiry.html
@@ -11,18 +11,18 @@
 </head>
 <body>
   <section class="product-inquiry">
-    <header class="product-inquiry__header">
+    <div class="product-inquiry__header">
       <div class="product-inquiry__header-info">
         <h2>상품문의</h2>
         <ul class="product-inquiry__header__list">
-          <li class="product-inquiry__header__item">• 상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수
+          <li class="product-inquiry__header__item">상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수
             있습니다.
           </li>
-          <li class="product-inquiry__header__item">• 배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이컬리 내 1:1 문의에 남겨주세요.</li>
+          <li class="product-inquiry__header__item">배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이컬리 내 1:1 문의에 남겨주세요.</li>
         </ul>
       </div>
       <button type="button" class="product-inquiry__header__button">문의하기</button>
-    </header>
+    </div>
     <div class="product-inquiry__main">
       <!-- Swiper -->
       <div class="swiper product-review__swiper">
@@ -182,7 +182,7 @@
 
   <!-- Initialize Swiper -->
   <script>
-    const swiper = new Swiper(".product-review__swiper", {
+    const swiper = new Swiper(".product-inquiry__swiper", {
       navigation: {
         nextEl: ".product-inquiry__button-next",
         prevEl: ".product-inquiry__button-prev",
