--- a/client/page/include/cart.html
+++ b/client/page/include/cart.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <main class="shopping-cart-main">
+  <main class="main">
     <section class="shopping-cart">
       <h2 class="shopping-cart__title">장바구니</h2>
       <div class="shopping-cart__wrapper">
