--- a/client/page/include/main.html
+++ b/client/page/include/main.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <main class="main__page">
+  <main class="main main__page">
     <section class="main__recommend-product">
       <h2 class="a11yHidden">추천 상품</h2>
       <p class="main__recommend-product__title">이 상품 어때요?</p>
